# sbb-nlp-customer-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-selenium.txt  trustpilot_scraper.py
.devcontainer/: devcontainer.json
src/data_segmentation/: 02_data_analysis.ipynb  03_segmentation.py
src/scraper/: 01_trustpilot_scraper.py
tests/: test_01_trustpilot_scraper.py  test_trustpilot_scraper.py
