[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbb-nlp-customer-segmentation"
version = "0.1.0"
description = "NLP pipeline for Trustpilot scraping and customer segmentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",  # Tabular data wrangling for review analysis
  "numpy>=1.26.0",  # Numeric operations and vector processing
  "scikit-learn>=1.5.0",  # Clustering, feature extraction, and ML utilities
  "scikit-fuzzy>=0.5.0",  # Fuzzy clustering and fuzzy logic segmentation
  "matplotlib>=3.8.0",  # Static charts for notebook analysis
  "seaborn>=0.13.0",  # Statistical visualizations
  "plotly>=5.22.0",  # Interactive analysis charts
  "yellowbrick>=1.5",  # Visual diagnostics for scikit-learn models
  "openai>=1.35.0",  # LLM API client for contextual/fuzzy segmentation prompts
  "ipykernel>=6.29.0",  # Notebook kernel integration
  "jupyterlab>=4.2.0",  # Notebook interface and tooling
  "openpyxl>=3.1.0",  # Excel file generation
  "selenium>=4.17.0",  # Browser automation for Trustpilot
]

[project.optional-dependencies]
selenium = [
  "openpyxl>=3.1.0",
  "selenium>=4.17.0",
]
notebook = [
  "ipykernel>=6.29.0",
  "jupyterlab>=4.2.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "plotly>=5.22.0",
  "yellowbrick>=1.5",
]
nlp = [
  "scikit-learn>=1.5.0",
  "scikit-fuzzy>=0.5.0",
  "openai>=1.35.0",
]
dev = [
  "black>=24.0.0",
  "ruff>=0.5.0",
  "isort>=5.13.0",
]
all = [
  "ipykernel>=6.29.0",
  "jupyterlab>=4.2.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "plotly>=5.22.0",
  "yellowbrick>=1.5",
  "scikit-learn>=1.5.0",
  "scikit-fuzzy>=0.5.0",
  "openai>=1.35.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "isort>=5.13.0",
]

